--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
 
 <div id="impress">
 
-    <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q>Aren't you just <b>bored</b> with all those slides-based presentations?</q>
+    <div id="1" class="step slide" data-x="-1000" data-y="-1500">
+        <h1 class="header1">Getting Started with Dev Ops</h1>
+        <b>By Rohit Ghatol</b>
     </div>
 
-    <div class="step slide" data-x="0" data-y="-1500" data-rotate-x="45">
-        <q>Don't you think that presentations given <strong>in modern browsers</strong> shouldn't <strong>copy the
-            limits</strong> of 'classic' slide decks?</q>
+    <div id="2" class="step slide" data-x="0" data-y="-1500" data-rotate-x="45">
+        <h1 class="header1">About Me</h1>
+        <b>TBD</b>
     </div>
 
-    <div class="step slide" data-x="1000" data-y="-1500">
-        <q>Would you like to <strong>impress your audience</strong> with <strong>stunning visualization</strong> of your
-            talk?</q>
+    <div id="3" class="step slide" data-x="1000" data-y="-1500">
+        <h1 class="header1">Why DevOps Came into Existence?</h1>
     </div>
 </div>
 
