Added few initial slides and layout and style

--- a/index.html
+++ b/index.html
@@ -27,22 +27,81 @@
     <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
 </div>
 
-<div id="impress">
+<article id="impress">
 
-    <div id="1" class="step slide" data-x="-1000" data-y="-1500">
-        <h1 class="header1">Getting Started with Dev Ops</h1>
-        <b>By Rohit Ghatol</b>
-    </div>
+    <section id="1" class="step slide" data-x="-1000" data-y="-1500">
+        <header class="fixed-top">
+            <h1>Getting Started with Dev Ops</h1>
+        </header>
+        <section class="center-middle">
+            <figure class="banner">
+                <img src="images/DevOps.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+            <hgroup>
+                <h3>By Rohit Ghatol</h3>
+                <h4>Director of Engineering - Synerzip</h4>
+            </hgroup>
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+    </section>
 
-    <div id="2" class="step slide" data-x="0" data-y="-1500" data-rotate-x="45">
-        <h1 class="header1">About Me</h1>
-        <b>TBD</b>
-    </div>
+    <section id="2" class="step slide" data-x="0" data-y="-1500" data-rotate-y="30">
+        <header class="fixed-top">
+            <h1>About Me</h1>
+        </header>
+        <section class="center-middle">
+            <figure class="profile right">
+                <img src="images/profile.jpg"></img>
+                <figureCaption></figureCaption>
+            </figure>
+            <aside class="right">
+                <ul>
+                    <li>Director of Engineering @ Synerzip</li>
+                    <li>Technology Evangelist</li>
+                    <li>Speaker at Tech Conferences</li>
+                </ul>
+            </aside>
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
 
-    <div id="3" class="step slide" data-x="1000" data-y="-1500">
-        <h1 class="header1">Why DevOps Came into Existence?</h1>
-    </div>
-</div>
+    </section>
+
+    <section id="3" class="step slide" data-x="1000" data-y="-1500" data-rotate-y="30">
+        <header class="fixed-top">
+            <h1>DevOps Story</h1>
+        </header>
+        <section class="">
+            <figure class="banner">
+                <img src="images/life-cycle.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+            <figure class="small-banner">
+                <img src="images/wall.png"></img>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+    </section>
+</article>
 
 
 <div class="hint">
