Why we need DevOps Slides

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section id="3" class="step slide" data-x="1000" data-y="-1500" data-rotate-y="60">
         <header class="fixed-top">
-            <h1>Product Development</h1>
+            <h1>Product Life Cycle</h1>
         </header>
         <section class="center-middle">
             <figure class="banner">
@@ -101,25 +101,6 @@
     </section>
     <section id="4" class="step slide" data-x="2000" data-y="-1500" data-rotate-y="90">
         <header class="fixed-top">
-            <h1>The DevOps Wall</h1>
-        </header>
-        <section class="center-middle">
-            <figure class="banner">
-                <img src="images/DevOps-Wall.png"></img>
-                <figureCaption></figureCaption>
-            </figure>
-
-        </section>
-        <footer class="fixed-bottom">
-            <hr/>
-            <figure class="logo">
-                <img src="images/synerzip-logo.png"></img>
-                <figureCaption></figureCaption>
-            </figure>
-        </footer>
-    </section>
-    <section id="5" class="step slide" data-x="5000" data-y="-1500" data-rotate-y="120">
-        <header class="fixed-top">
             <h1>The Real Story</h1>
         </header>
         <section class="center-middle">
@@ -135,6 +116,26 @@
                 <figureCaption></figureCaption>
             </figure>
         </footer>
+    </section>
+    <section id="5" class="step slide" data-x="5000" data-y="-1500" data-rotate-y="120">
+        <header class="fixed-top">
+            <h1>The Dev - Ops Wall</h1>
+        </header>
+        <section class="center-middle">
+            <figure class="banner">
+                <img src="images/DevOps-Wall.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
     </section>
 </article>
 
