Added 2 new slides

--- a/index.html
+++ b/index.html
@@ -137,6 +137,47 @@
         </footer>
 
     </section>
+    <section id="6" class="step slide" data-x="7000" data-y="-1500" data-rotate-y="140">
+        <header class="fixed-top">
+            <h1>Problems Due to DevOps Wall</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner2">
+                <img src="images/expect-delays.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="7" class="step slide" data-x="9000" data-y="-1500" data-rotate-y="160">
+        <header class="fixed-top">
+            <h1>So What is DevOps?</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner2">
+                <img src="images/What-DevOps-is-Not.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
 </article>
 
 
