Added new slides

--- a/index.html
+++ b/index.html
@@ -178,6 +178,49 @@
         </footer>
 
     </section>
+    <section id="8" class="step slide" data-x="11000" data-y="-1500" data-rotate-y="180">
+        <header class="fixed-top">
+            <h1>So What is DevOps?</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src="images/DevOps-Defn.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+
+    <section id="9" class="step slide" data-x="13000" data-y="-1500" data-rotate-y="200">
+        <header class="fixed-top">
+            <h1></h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src="images/Rule-of-Thumb.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
 </article>
 
 
