Added new slides

--- a/index.html
+++ b/index.html
@@ -221,6 +221,66 @@
         </footer>
 
     </section>
+    <section id="10" class="step slide" data-x="15000" data-y="-1500" data-rotate-y="220">
+        <header class="fixed-top">
+            <h1>Culture and People</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src="images/question-1.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="11" class="step slide" data-x="17000" data-y="-1500" data-rotate-y="240">
+        <header class="fixed-top">
+            <h1>Culture and People</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src="images/question-2.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="12" class="step slide" data-x="19000" data-y="-1500" data-rotate-y="260">
+        <header class="fixed-top">
+            <h1>Tools</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src="images/tools.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
 </article>
 
 
