Added new slides

--- a/index.html
+++ b/index.html
@@ -263,6 +263,66 @@
     </section>
     <section id="12" class="step slide" data-x="19000" data-y="-1500" data-rotate-y="260">
         <header class="fixed-top">
+            <h1>Culture and People</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src="images/question-2.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="13" class="step slide" data-x="21000" data-y="-1500" data-rotate-y="280">
+        <header class="fixed-top">
+            <h1>Culture and People</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src="images/question-2.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="14" class="step slide" data-x="23000" data-y="-1500" data-rotate-y="280">
+        <header class="fixed-top">
+            <h1>Culture and People</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src="images/question-2.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="15" class="step slide" data-x="25000" data-y="-1500" data-rotate-y="300">
+        <header class="fixed-top">
             <h1>Tools</h1>
         </header>
         <section class="center-top">
@@ -271,6 +331,466 @@
                 <figureCaption></figureCaption>
             </figure>
 
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="16" class="step slide" data-x="27000" data-y="-1500" data-rotate-y="320">
+        <header class="fixed-top">
+            <h1>Machine Provisioning</h1>
+        </header>
+        <section class="center-top">
+            <ul>
+                <li>Rule 1 - All Software runs on Production Like Environment</li>
+                <li>Rule 2 - All Environments are Provisioned using Automation</li>
+                <li>Rule 3 - Central Repository of all such Provisioning Automation</li>
+            </ul>
+            <br>
+            <hr>
+
+                Starts from First Sprint (Bottom line)
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="17" class="step slide" data-x="29000" data-y="-1500" data-rotate-y="340">
+        <header class="fixed-top">
+            <h1>Vagrant</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="18" class="step slide" data-x="31000" data-y="-1500" data-rotate-y="360">
+        <header class="fixed-top">
+            <h1>Other tools</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="19" class="step slide" data-x="33000" data-y="-1500" data-rotate-y="20">
+        <header class="fixed-top">
+            <h1>Software Provisioning</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="20" class="step slide" data-x="35000" data-y="-1500" data-rotate-y="40">
+        <header class="fixed-top">
+            <h1>Puppet/Chef</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="21" class="step slide" data-x="37000" data-y="-1500" data-rotate-y="60">
+        <header class="fixed-top">
+            <h1>Puppet Vs Chef</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="22" class="step slide" data-x="39000" data-y="-1500" data-rotate-y="80">
+        <header class="fixed-top">
+            <h1>Other Tools</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="23" class="step slide" data-x="41000" data-y="-1500" data-rotate-y="100">
+        <header class="fixed-top">
+            <h1>Configuration Management</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="24" class="step slide" data-x="43000" data-y="-1500" data-rotate-y="100">
+        <header class="fixed-top">
+            <h1>Monitoring</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="25" class="step slide" data-x="45000" data-y="-1500" data-rotate-y="120">
+        <header class="fixed-top">
+            <h1>Nagios</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="26" class="step slide" data-x="47000" data-y="-1500" data-rotate-y="140">
+        <header class="fixed-top">
+            <h1>Other Tools</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="27" class="step slide" data-x="49000" data-y="-1500" data-rotate-y="160">
+        <header class="fixed-top">
+            <h1>Monitoring/Reporting/Dashboard</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="29" class="step slide" data-x="51000" data-y="-1500" data-rotate-y="180">
+        <header class="fixed-top">
+            <h1>Pager Duty</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="30" class="step slide" data-x="53000" data-y="-1500" data-rotate-y="200">
+        <header class="fixed-top">
+            <h1>Other Tools</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="31" class="step slide" data-x="55000" data-y="-1500" data-rotate-y="220">
+        <header class="fixed-top">
+            <h1>Expert Tips</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="32" class="step slide" data-x="57000" data-y="-1500" data-rotate-y="240">
+        <header class="fixed-top">
+            <h1>Expert Tips</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="33" class="step slide" data-x="59000" data-y="-1500" data-rotate-y="260">
+        <header class="fixed-top">
+            <h1>Contact Me</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="34" class="step slide" data-x="61000" data-y="-1500" data-rotate-y="280">
+        <header class="fixed-top">
+            <h1>Questions</h1>
+        </header>
+        <section class="center-middle">
+            <figure class="banner4">
+                <img src="images/synerzip.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+            <br>
+            <div class="center-text">
+                <p>www.synerzip.com</p>
+                <p>Hemant Elhence</p>
+                <p>hemant@synerzip.com</p>
+                <p>469.322.0349</p>
+            </div>
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="35" class="step slide" data-x="63000" data-y="-1500" data-rotate-y="300">
+        <header class="fixed-top">
+            <h1>Synerzip in a NutShell</h1>
+        </header>
+        <section class="center-top para">
+
+            <ul>
+                <li>Software product development <b style="color:blue;font-size: 16pt"><i>partner</i></b> for small/mid-sized technology companies</li>
+                <ul>
+                    <li>Exclusive focus on small/mid-sized technology companies, typically venture-backed companies in growth phase</li>
+                    <li>By definition, all Synerzip work is the IP of its respective clients</li>
+                    <li>Deep experience in full SDLC – design, dev, QA/testing, deployment</li>
+                </ul>
+                <li>Dedicated team of <b style="color:blue;font-size: 16pt"><i>high caliber</i></b> software professionals for each client</li>
+                <ul>
+                    <li>Seamlessly extends client’s local team, offering full transparency</li>
+                    <li>Stable teams with very low turn-over</li>
+                    <li>NOT just “staff augmentation”, but provide full mgmt support</li>
+                </ul>
+                <li>Actually <b style="color:blue;font-size: 16pt"><i>reduces risk</i></b> of development/delivery</li>
+                <ul>
+                    <li>Experienced team - uses appropriate level of engineering discipline</li>
+                    <li>Practices Agile development – responsive, yet disciplined</li>
+                </ul>
+                <li><b style="color:blue;font-size: 16pt"><i>Reduces cost</i></b> – dual-shore team, 50% cost advantage</li>
+                <li>Offers long term <b style="color:blue;font-size: 16pt"><i>flexibility</i></b> – allows (facilitates) taking offshore team captive – aka “BOT” option</li>
+            </ul>
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="36" class="step slide" data-x="65000" data-y="-1500" data-rotate-y="320">
+        <header class="fixed-top">
+            <h1>Our Clients</h1>
+        </header>
+        <section class="center-top para">
+
+            <figure class="banner2">
+                <img src="images/clients.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="37" class="step slide" data-x="67000" data-y="-1500" data-rotate-y="340">
+        <header class="fixed-top">
+            <h1></h1>
+        </header>
+        <section class="center-top para">
+            <div class="center-text">
+                <p>Thanks!</p>
+                <p>Call us for Free Consultation</p>
+            </div>
+            <br>
+            <figure class="banner4">
+                <img src="images/synerzip.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+            <br>
+            <br>
+            <div>
+                <p>Hemant Elhence</p>
+                <p>hemant@synerzip.com</p>
+                <p>469.322.0349</p>
+
+            </div>
         </section>
         <footer class="fixed-bottom">
             <hr/>
