Added new slides

--- a/index.html
+++ b/index.html
@@ -330,7 +330,9 @@
                 <img src="images/tools.png"></img>
                 <figureCaption></figureCaption>
             </figure>
-
+            <br>
+            <p>Assumption -</p>
+            <p>Continuous Integration Tools are already in place</p>
         </section>
         <footer class="fixed-bottom">
             <hr/>
@@ -354,7 +356,7 @@
             <br>
             <hr>
 
-                Starts from First Sprint (Bottom line)
+                Apply these rules from first Sprint
 
         </section>
         <footer class="fixed-bottom">
