Added new slides

--- a/index.html
+++ b/index.html
@@ -373,8 +373,8 @@
             <h1>Vagrant</h1>
         </header>
         <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
+            <figure class="banner2">
+                <img src="images/Vagrant-Diagram.png"></img>
                 <figureCaption></figureCaption>
             </figure>
 
