Added new diagram for Software Provisioning

--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
             <h1>Software Provisioning</h1>
         </header>
         <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
+            <figure class="banner2">
+                <img src="images/Software-Provisioning.png"></img>
                 <figureCaption></figureCaption>
             </figure>
 
@@ -431,7 +431,7 @@
     </section>
     <section id="20" class="step slide" data-x="35000" data-y="-1500" data-rotate-y="40">
         <header class="fixed-top">
-            <h1>Puppet/Chef</h1>
+            <h1>Puppet</h1>
         </header>
         <section class="center-top">
             <figure class="banner3">
