Added new diagram for Puppet

--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
             <h1>Puppet</h1>
         </header>
         <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
+            <figure class="banner2">
+                <img src="images/puppet.png"></img>
                 <figureCaption></figureCaption>
             </figure>
 
