Added Hiera Example

--- a/index.html
+++ b/index.html
@@ -391,11 +391,11 @@
     </section>
     <section id="18" class="step slide" data-x="31000" data-y="-1500" data-rotate-y="360">
         <header class="fixed-top">
-            <h1>Other tools</h1>
+            <h1>More about Vagrant</h1>
         </header>
         <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
+            <figure class="banner2">
+                <img src="images/vagrant-code-example.png"></img>
                 <figureCaption></figureCaption>
             </figure>
 
@@ -451,11 +451,11 @@
     </section>
     <section id="21" class="step slide" data-x="37000" data-y="-1500" data-rotate-y="60">
         <header class="fixed-top">
-            <h1>Puppet Vs Chef</h1>
+            <h1>Puppet Example</h1>
         </header>
         <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
+            <figure class="banner2">
+                <img src="images/Puppet-Example.png"></img>
                 <figureCaption></figureCaption>
             </figure>
 
@@ -474,11 +474,15 @@
             <h1>Other Tools</h1>
         </header>
         <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
-                <figureCaption></figureCaption>
-            </figure>
-
+            <ul>
+                <li><a href="http://puppetlabs.com/puppet/puppet-open-source" target="_blank">Puppet</a></li>
+                <li><a href="http://www.getchef.com/chef/" target="_blank">Chef </a></li>
+                <li><a href="http://www.ansible.com/" target="_blank">Ansible </a></li>
+                <li><a href="https://cfengine.com/" target="_blank">CFEngine </a></li>
+                <li><a href="http://www.saltstack.com/" target="_blank">SaltStack </a></li>
+            </ul>
+            <p>Tools Comparison</p>
+            <a href="https://www.youtube.com/watch?v=T56uN6N_hs0" target="_blank"><img src="images/tool-comparison-youtube.png"></img></a>
         </section>
         <footer class="fixed-bottom">
             <hr/>
@@ -494,8 +498,8 @@
             <h1>Configuration Management</h1>
         </header>
         <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
+            <figure class="banner5">
+                <img src="images/configuration-mgmt.png"></img>
                 <figureCaption></figureCaption>
             </figure>
 
@@ -509,9 +513,9 @@
         </footer>
 
     </section>
-    <section id="24" class="step slide" data-x="43000" data-y="-1500" data-rotate-y="100">
+    <section id="24" class="step slide" data-x="43000" data-y="-1500" data-rotate-y="120">
         <header class="fixed-top">
-            <h1>Monitoring</h1>
+            <h1>Demo Time</h1>
         </header>
         <section class="center-top">
             <figure class="banner3">
@@ -531,7 +535,7 @@
     </section>
     <section id="25" class="step slide" data-x="45000" data-y="-1500" data-rotate-y="120">
         <header class="fixed-top">
-            <h1>Nagios</h1>
+            <h1>Monitoring</h1>
         </header>
         <section class="center-top">
             <figure class="banner3">
@@ -551,7 +555,7 @@
     </section>
     <section id="26" class="step slide" data-x="47000" data-y="-1500" data-rotate-y="140">
         <header class="fixed-top">
-            <h1>Other Tools</h1>
+            <h1>Nagios</h1>
         </header>
         <section class="center-top">
             <figure class="banner3">
@@ -571,6 +575,26 @@
     </section>
     <section id="27" class="step slide" data-x="49000" data-y="-1500" data-rotate-y="160">
         <header class="fixed-top">
+            <h1>Other Tools</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src=""></img>
+                <figureCaption></figureCaption>
+            </figure>
+
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="28" class="step slide" data-x="51000" data-y="-1500" data-rotate-y="180">
+        <header class="fixed-top">
             <h1>Monitoring/Reporting/Dashboard</h1>
         </header>
         <section class="center-top">
@@ -589,7 +613,7 @@
         </footer>
 
     </section>
-    <section id="29" class="step slide" data-x="51000" data-y="-1500" data-rotate-y="180">
+    <section id="29" class="step slide" data-x="53000" data-y="-1500" data-rotate-y="200">
         <header class="fixed-top">
             <h1>Pager Duty</h1>
         </header>
@@ -609,7 +633,7 @@
         </footer>
 
     </section>
-    <section id="30" class="step slide" data-x="53000" data-y="-1500" data-rotate-y="200">
+    <section id="30" class="step slide" data-x="55000" data-y="-1500" data-rotate-y="220">
         <header class="fixed-top">
             <h1>Other Tools</h1>
         </header>
@@ -629,7 +653,7 @@
         </footer>
 
     </section>
-    <section id="31" class="step slide" data-x="55000" data-y="-1500" data-rotate-y="220">
+    <section id="31" class="step slide" data-x="57000" data-y="-1500" data-rotate-y="240">
         <header class="fixed-top">
             <h1>Expert Tips</h1>
         </header>
@@ -649,13 +673,13 @@
         </footer>
 
     </section>
-    <section id="32" class="step slide" data-x="57000" data-y="-1500" data-rotate-y="240">
+    <section id="32" class="step slide" data-x="59000" data-y="-1500" data-rotate-y="260">
         <header class="fixed-top">
-            <h1>Expert Tips</h1>
+            <h1>Conclusion</h1>
         </header>
         <section class="center-top">
             <figure class="banner3">
-                <img src=""></img>
+                <img src="images/Conclusion.png"></img>
                 <figureCaption></figureCaption>
             </figure>
 
@@ -669,27 +693,8 @@
         </footer>
 
     </section>
-    <section id="33" class="step slide" data-x="59000" data-y="-1500" data-rotate-y="260">
-        <header class="fixed-top">
-            <h1>Contact Me</h1>
-        </header>
-        <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
-                <figureCaption></figureCaption>
-            </figure>
 
-        </section>
-        <footer class="fixed-bottom">
-            <hr/>
-            <figure class="logo">
-                <img src="images/synerzip-logo.png"></img>
-                <figureCaption></figureCaption>
-            </figure>
-        </footer>
-
-    </section>
-    <section id="34" class="step slide" data-x="61000" data-y="-1500" data-rotate-y="280">
+    <section id="33" class="step slide" data-x="63000" data-y="-1500" data-rotate-y="300">
         <header class="fixed-top">
             <h1>Questions</h1>
         </header>
@@ -715,7 +720,7 @@
         </footer>
 
     </section>
-    <section id="35" class="step slide" data-x="63000" data-y="-1500" data-rotate-y="300">
+    <section id="34" class="step slide" data-x="65000" data-y="-1500" data-rotate-y="320">
         <header class="fixed-top">
             <h1>Synerzip in a NutShell</h1>
         </header>
@@ -752,7 +757,7 @@
         </footer>
 
     </section>
-    <section id="36" class="step slide" data-x="65000" data-y="-1500" data-rotate-y="320">
+    <section id="35" class="step slide" data-x="67000" data-y="-1500" data-rotate-y="340">
         <header class="fixed-top">
             <h1>Our Clients</h1>
         </header>
@@ -772,7 +777,7 @@
         </footer>
 
     </section>
-    <section id="37" class="step slide" data-x="67000" data-y="-1500" data-rotate-y="340">
+    <section id="36" class="step slide" data-x="69000" data-y="-1500" data-rotate-y="360">
         <header class="fixed-top">
             <h1></h1>
         </header>
