Added Hiera Example

--- a/index.html
+++ b/index.html
@@ -518,8 +518,8 @@
             <h1>Demo Time</h1>
         </header>
         <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
+            <figure class="banner2">
+                <img src="images/demo.png"></img>
                 <figureCaption></figureCaption>
             </figure>
 
